--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <title>React App</title>
+    <link rel="sortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Biscoito da Sorte</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
